--- a/requirements.txt
+++ b/requirements.txt
@@ -4,25 +4,21 @@ gin-config>=0.4.0
 pydub>=0.24.0
 lingvo>=0.9.0
 numpy>=1.18.2
-tensorflow>=2.3.1
-tensorflow-gpu>=2.3.1
 tensorflow-addons>=0.12.0
 tensorflow-datasets>=4.2.0
 
 # audio 
 librosa==0.8.1
 
-# local package
-#-e .
+#gammatone dependencies 
+scipy
+nose
+mock
+matplotlib
 
 # external requirements
-# click
-# Sphinx
-# coverage
-# awscli
-# flake8
-# python-dotenv>=0.5.1
-
-
+torch==1.10.1+cu113
+torchaudio
+soundfile
 # backwards compatibility
 # pathlib2
