--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ absl-py>=0.10.0
 gin-config>=0.4.0
 pydub>=0.24.0
 lingvo>=0.9.0
-numpy>=1.18.2
+numpy== 1.21
 tensorflow-addons>=0.12.0
 tensorflow-datasets>=4.2.0
 
@@ -17,9 +17,10 @@ mock
 matplotlib
 
 # external requirements
-torch==1.10.1+cu113
-torchaudio
+torch==1.10.1+cu113 
+torchaudio == 0.10.1
 soundfile
 pandas
+PyYAML
 # backwards compatibility
 # pathlib2
