--- a/src/models/configuration.yml
+++ b/src/models/configuration.yml
@@ -1,8 +1,9 @@
 type: 'baseline'
 framework: 'tensorflow' # ['tensorflow', 'torch']
-filters: [32, 64, 128]
+filters: [40, 40]
 kernel: 3
-pool: [2, 2, 2]
-dropout: [0.3, 0.3, 0.3]
+pool: [(1, 10), (1, 10)]
+dropout: [0.3, 0.3]
 global_pool: 'avg'
-augmented_conv: false
+spectrogram_dim: (64, 51, 1)
+verbose: True
